--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'net.steamcrafted:load-toast:1.0.10'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile files('../libs/jsoup-1.8.3.jar')
 }
