Added a Content Provider , Database and Constant class for storing and fetching data......

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:exported="false"
+            android:authorities="com.newsbuzz"
+            android:name=".Dbprovider"/>
     </application>
 
 </manifest>
