--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
@@ -28,4 +28,5 @@ dependencies {
     compile 'net.steamcrafted:load-toast:1.0.10'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('../libs/jsoup-1.8.3.jar')
+    compile files('C:/NewsBuzz/libs/unbescape-1.1.2.jar')
 }
