--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,15 @@
         </activity>
         <activity
             android:name=".Preferences"
-            android:label="@string/app_name"
+            android:label="Preferences"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".Settings"
+            android:label="@string/action_settings"
             android:theme="@style/AppTheme"/>
         <activity
             android:name=".Splashscreen"
-            android:label="@string/app_name"
+            android:label="NewsBuzz"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
