--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('../libs/jsoup-1.8.3.jar')
     compile files('C:/NewsBuzz/libs/unbescape-1.1.2.jar')
+    compile files('C:/NewsBuzz/libs/joda-time-2.9.3.jar')
 }
