--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions{
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 dependencies {
@@ -28,6 +32,6 @@ dependencies {
     compile 'net.steamcrafted:load-toast:1.0.10'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('../libs/jsoup-1.8.3.jar')
-    compile files('C:/NewsBuzz/libs/unbescape-1.1.2.jar')
-    compile files('C:/NewsBuzz/libs/joda-time-2.9.3.jar')
+    compile files('../libs/unbescape-1.1.2.jar')
+    compile files('../libs/joda-time-2.9.3.jar')
 }
